# examplelib

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c
inc/: examplelib.h
src/: examplelib.c
test/: CMakeLists.txt  test.c
